--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.645.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
